# SpeechRecognitionProject

./: JustFile  logger_config.py  main.py  pyproject.toml
BUI/: backend.py  front.py
TUI/: tui.py
call_processor_modules/: __init__.py  categorize_call.py  pii_check.py  profanity_check.py  pydantic_models.py  required_phrases.py  sentiment_analysis.py  speaker.py  speaker_diarization.py  speaker_speed.py  transcription.py
project-docs/docs/: architecture.md  functionality.md
